bug: vf-bookmark icon vertical spacing (#1740)
* bug: vf-bookmark icon vertical spacing

Closes #1687

* Update vf-bookmark.scss

--- a/components/vf-bookmark/vf-bookmark.scss
+++ b/components/vf-bookmark/vf-bookmark.scss
@@ -39,14 +39,12 @@
   // align-items: center;
   // border-bottom: none;
   color: ui-color(white);
+  line-height: 1rem;
   stroke: color(blue);
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 2px;
-  // display: inline-flex;
-  // text-decoration: none;
-
-  // fill: none;stroke: #000000;
+  vertical-align: middle;
 
   svg {
     fill: currentColor;
